--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.8.4",
     "classnames": "^2.5.1",
+    "framer-motion": "^12.6.3",
     "normalize.css": "^8.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
