--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "@tippyjs/react": "^4.2.6",
+    "animejs": "^4.0.1",
     "axios": "^1.8.4",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
+    "firebase": "^11.6.0",
     "framer-motion": "^12.6.3",
     "normalize.css": "^8.0.1",
     "react": "^19.0.0",
