thêm tính năng chọn ký tự đặt biệt cho phần thêm câu hỏi

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
+    "react-simple-keyboard": "^3.8.66",
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.17.2",
     "web-vitals": "^2.1.4"
