--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "axios": "^1.8.4",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
-    "firebase": "^11.6.0",
+    "firebase": "^11.6.1",
     "framer-motion": "^12.6.3",
     "normalize.css": "^8.0.1",
     "react": "^19.0.0",
@@ -42,6 +42,7 @@
   "devDependencies": {
     "babel-plugin-module-resolver": "^5.0.2",
     "customize-cra": "^1.0.0",
+    "html-webpack-plugin": "^5.6.3",
     "react-app-rewired": "^2.2.1",
     "sass": "^1.85.1"
   },
