--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tippyjs/react": "^4.2.6",
     "animejs": "^4.0.1",
     "axios": "^1.8.4",
+    "chart.js": "^4.4.9",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
     "firebase": "^11.6.1",
